force-app/main/default/objects/Einstein_Event__e/Einstein_Event__e.object-meta.xml
<CustomObject>
    <label>Einstein Event</label>
    <pluralLabel>Einstein Events</pluralLabel>
</CustomObject>