force-app/main/default/objects/Einstein_Event__e/fields/Intent_Predictions__c.field-meta.xml
<CustomField>
    <fullName>Intent_Predictions__c</fullName>
    <label>Intent Predictions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>