force-app/main/default/objects/Einstein_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>