force-app/main/default/objects/Einstein_Event__e/fields/Message_URL__c.field-meta.xml
<CustomField>
    <fullName>Message_URL__c</fullName>
    <label>Message URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>