force-app/main/default/objects/Einstein_Event__e/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>