force-app/main/default/objects/Einstein_Event__e/fields/Phrase__c.field-meta.xml
<CustomField>
    <fullName>Phrase__c</fullName>
    <label>Phrase</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>