force-app/main/default/objects/Einstein_Event__e/fields/Sentiment_Predictions__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Predictions__c</fullName>
    <label>Sentiment Predictions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>