force-app/main/default/objects/Einstein_Event__e/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>