force-app/main/default/objects/Einstein_Event__e/fields/User_Pic_URL__c.field-meta.xml
<CustomField>
    <fullName>User_Pic_URL__c</fullName>
    <label>User Pic URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>