force-app/main/default/objects/Einstein_Event__e/fields/Vision_Predictions__c.field-meta.xml
<CustomField>
    <fullName>Vision_Predictions__c</fullName>
    <label>Vision Predictions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>